# WriteSystem

./: .gitignore  AGENTS.md  AGENT_ISOLATION_AUDIT.md  README.md
docs/: ONE_COMMAND_WORKFLOW.md  QUICKSTART.md  WORKFLOW_GUIDE.md
reference/: bibliography.md  extracted_AdversarialParaphrasing.txt  extracted_AuthorMist.txt  extracted_DetectGPT.txt  extracted_FastDetectGPT.txt  extracted_GLTR.txt  extracted_PADBen.txt  extracted_RADAR.txt  extracted_ReasoningAware.txt  extracted_SilverSpeak.txt  extracted_SimpsonParadox.txt  extracted_StealthRL.txt  extracted_TimeMark.txt  extracted_Watermark_Kirchenbauer.txt
scripts/: archive.sh  cleanup-project.sh  run.sh  scaffold.sh  tool.sh  validate.sh
spec/: REPO_SPEC.md
spec/changelog/: CHANGELOG.md
spec/conventions/: cross-agent.md  file-naming.md  file-schemas.md  git-strategy.md  pipeline-config.md  pipeline-spec.md  project-lifecycle.md  quality-and-tools.md  review-rules.md  source-materials.md  tool-registry.md
tools/: REGISTRY.yml
tools/agent/: _TEMPLATE.md  (+18 more)
tools/mcp-servers/paper-tools-mcp/: MANIFEST.yml  pyproject.toml
tools/mcp-servers/paper-tools-mcp/src/paper_tools_mcp/: __init__.py  server.py
tools/mcp-servers/paper-tools-mcp/src/paper_tools_mcp/tests/: conftest.py  test_formatting.py  test_retry.py  test_validation.py
tools/mcp-servers/paper-tools-mcp/src/paper_tools_mcp/tools/: __init__.py  aigc.py  docx_template.py  formatting.py  literature.py  retrieval.py  retry.py  validation.py  xlsx_tools.py
tools/mcp-servers/paper-tools-mcp/src/paper_tools_mcp/utils/: __init__.py  safe_path.py
(+57 files in other folders)
