[project]
name = "paper-tools-mcp"
version = "0.1.0"
description = "论文工具 MCP Server — 校验、排版、检索、AIGC 加噪、AIGC 风险评估"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.12.0",
    "sentence-transformers>=3.0.0",
    "numpy>=1.26.0",
    "httpx>=0.27.0",
    "python-docx>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/paper_tools_mcp"]
